--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -90,7 +90,6 @@ header {
       .hamburger-box {
         height: 12px;
       }
-
     }
 
     a {
@@ -319,9 +318,9 @@ header {
         position: absolute;
         bottom: 30px;
         text-align: center;
-        width: 314px;
+        width: 82%;
         left: 50%;
-        margin-left: -159px;
+        margin-left: -41%;
         background-color: #14b7a0;
         color: #effaf9;
       }
@@ -353,17 +352,13 @@ header {
 .footer_banner {
   background: url("/images/footer-banner.png") no-repeat center;
   background-size: cover;
-  height: 410px;
+  padding: 137px;
   position: relative;
   margin-bottom: 80px;
   text-align: center;
   position: relative;
 
   .text {
-    position: absolute;
-    left: 50%;
-    margin: 120px -390px;
-    width: 780px;
     color: #fff;
     text-transform: uppercase;
 
@@ -390,9 +385,186 @@ footer {
 
   li {
     list-style: none;
+    margin-bottom: 0.7rem;
 
     &:hover {
       color: #21a393;
     }
+  }
+
+  a {
+    color: #222;
+  }
+
+  .fa {
+    margin-right: 5px;
+  }
+
+  .social-media {
+    margin-top: 25px;
+
+    .fa {
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      border: 1px solid #d8d8d8;
+
+      &:hover {
+        color: #21a393;
+      }
+    }
+  }
+}
+
+// Grow CSS
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.03);
+}
+
+// Smaller Devices
+
+@media only screen and (max-width: 1180px) {
+  header {
+    height: auto;
+  }
+
+  .container {
+    width: 100%;
+    padding: 0;
+  }
+
+  section,
+  footer {
+    padding: 10px;
+  }
+
+  .header_banner .text {
+    text-align: center;
+  }
+
+  .refine-search {
+    display: block;
+    height: auto;
+
+    .eight,.four {
+      width: 100%
+    }
+  }
+}
+
+@media only screen and (max-width: 970px) {
+  .opportunities .four,
+  .opportunity {
+      width: 100%;
+      margin: 0;
+  }
+}
+
+// Mobile
+
+@media only screen and (max-width: 768px) {
+  .btn {
+    font-size: 10px;
+  }
+
+  header {
+    .user {
+      width: 100%;
+      display: block;
+      text-align: center;
+
+      .btn {
+       width: 60px;
+      }
+    }
+
+    .logo {
+      margin-left: 10px;
+      height: 75px;
+    }
+  }
+
+  header .user .navigate {
+    display: none
+  }
+
+  .header_banner {
+    .text {
+      padding-top: 20px;
+    }
+  }
+
+    .refine-search {
+      line-height: 55px;
+      .eight {
+        padding: 0 20px;
+
+      select {
+        width: 100%
+      }
+    }
+  }
+
+  .results {
+    float: none;
+    line-height: 15px;
+    text-align: center;
+    height: auto;
+
+    p, .buttons {
+      float: none;
+    }
+  }
+
+  .btn.next, .btn.previous {
+    width: 35px;
+  }
+
+  .btn.page_number {
+    width: 23px;
+  }
+
+  .advert {
+    width: 100%
+  }
+
+  .hamburger {
+    position: absolute;
+    top: -5px;
+    right: 20px;
+  }
+
+  .footer_banner {
+    margin-bottom: 10px;
+    padding: 40px;
+  }
+
+  footer {
+    text-align: center;
+    line-height: 0.8em;
+  }
+
+  .opportunities .opportunity h2 {
+    font-size: 20px;
+  }
+
+  .opportunities .opportunity p {
+    font-size: 14px;
   }
 }
